src/assets/styles/helpers/_classname.scss
@use "sass:map";
@use "sass:meta";
@use "mixin";

body {
  font-family: var(--font-family-primary);
}

//***** font sizes *****//
$font-sizes: 6, 10, 12, 14, 16, 20, 24, 32, 36, 40, 48, 64;

@each $size in $font-sizes {
  .fs-#{$size} {
    @include mixin.font($size);
  }
}

//***** font weight *******//
$font-weights: 400, 500, 600, 700;

@each $weight in $font-weights {
  .fw-#{$weight} {
    @include mixin.font-weight($weight);
  }
}

//***** margin and padding *****//

$space-values: (0, 2, 4, 6, 8, 12, 16, 20, 24, 32, 40, 48, 56, 64, 80, 160, 240, auto) !default;

//shorthands
$space-prefixes: (
        m : margin,
        mt : margin-top,
        mr : margin-right,
        mb : margin-bottom,
        ml : margin-left,
        p : padding,
        pt : padding-top,
        pr : padding-right,
        pb : padding-bottom,
        pl : padding-left
) !default;

@mixin make-spaces() {
  @each $attr-short, $attr-long in $space-prefixes {
    @each $value in $space-values {
      .#{$attr-short}-#{$value} {
        @if $value == 'auto' { /*add the @if loop*/
          #{$attr-long}: #{$value};
        } @else {
          #{$attr-long}: #{$value}#{'px'};
        }
      }
    }
  }
}

@include make-spaces();

//headings
.heading {
  $heading-type: (
          xlarge: var(--font-size-64),
          large: var(--font-size-48),
          medium: var(--font-size-40),
          standard: var(--font-size-36),
          small: var(--font-size-32),
          xsmall: var(--font-size-24),
  );

  font-family: var(--font-family-primary);

  @each $type, $size in $heading-type {
    &-#{$type} {
      font-size: $size;
    }
  }
}

//body text

.body {
  $body-type: (
          xlarge: var(--font-size-32),
          large: var(--font-size-20),
          medium: var(--font-size-16),
          standard: var(--font-size-14),
          small: var(--font-size-12),
          xsmall: var(--font-size-10),
          xxsmall: var(--font-size-10),
  );

  font-family: var(--font-family-primary);

  @each $type, $size in $body-type {
    &-#{$type} {
      font-size: $size;
    }
  }
}

//weight

.regular {
  font-weight: var(--font-weight-400);
}

.semibold {
  font-weight: var(--font-weight-500);
}

.bold {
  font-weight: var(--font-weight-600);
}

.bolder {
  font-weight: var(--font-weight-700);
}

//line height

.lh {
  $lineHeight-type: (
          large: var(--line-height-lg),
          medium: var(--line-height-md),
          small: var(--line-height-sm),
          xsmall: var(--line-height-xs),
  );

  @each $type, $size in $lineHeight-type {
    &-#{$type} {
      line-height: $size;
    }
  }
}

//colors

.color {
  $color-type: (
          primary: var(--grey-900),
          secondary: var(--grey-800),
          tertiary: var(--grey-500),
          disabled: var(--grey-400),
          selected: var(--brand-500),
          inverse: var(--white),
          brand: var(--brand-700),
          success: var(--green-600),
          information: var(--blue-800),
          warning: var(--yellow-800),
          danger: var(--red-600),
          discovery: var(--purple-800),
  );

  @each $type, $color in $color-type {
    &-#{$type} {
      color: $color;
    }
  }
}


//icons sizes

.icon {
  --icon-xxl: var(--size-48);
  --icon-xl: var(--size-32);
  --icon-lg: var(--size-28);
  --icon-md: var(--size-24);
  --icon-sm: var(--size-20);
  --icon-xs: var(--size-16);
  --icon-xxs: var(--size-12);

  @include mixin.flexbox;
  @include mixin.align-items(center);
  @include mixin.justify-content(center);

  &--xxsmall {
    font-size: var(--icon-xxs);
  }

  &--xsmall {
    font-size: var(--icon-xs);
  }

  &--small {
    font-size: var(--icon-sm);
  }

  &--medium {
    font-size: var(--icon-md);
  }

  &--large {
    font-size: var(--icon-lg);
  }

  &--xlarge {
    font-size: var(--icon-xl);
  }

  &--xxlarge {
    font-size: var(--icon-xxl);
  }
}

//scroll

.scrollbar {
  overflow: hidden;

  /* Works on Firefox */
  @-moz-document url-prefix() {
    scrollbar-width: thin;
    scrollbar-color: var(--grey-50) transparent;
  }

  /* Works on Chrome, Edge, and Safari */

  &::-webkit-scrollbar-track {
    background: transparent;
  }

  &::-webkit-scrollbar-thumb {
    background-color: var(--grey-200);
    border-radius: var(--border-radius-100);

    &:hover {
      background-color: var(--grey-300);
    }
  }

  &--vertical {
    overflow-y: auto;

    /* Works on Chrome, Edge, and Safari */
    &::-webkit-scrollbar-track {
      margin: var(--space-8) 0;
    }

    &::-webkit-scrollbar {
      width: var(--space-4);
    }
  }

  &--horizontal {
    overflow-x: auto;

    /* Works on Chrome, Edge, and Safari */
    &::-webkit-scrollbar-track {
      margin: 0 var(--space-8);
    }

    &::-webkit-scrollbar {
      height: var(--size-10);
    }
  }
}

//flex

.flexbox {
  @include mixin.flexbox;
}

.flex-direction {
  &--column {
    @include mixin.flex-direction(column);
  }

  &--column-reverse {
    @include mixin.flex-direction(column-reverse);
  }

  &--row {
    @include mixin.flex-direction(row);
  }

  &--row-reverse {
    @include mixin.flex-direction(row-reverse);
  }
}

.flex-wrap {
  &--wrap {
    @include mixin.flex-wrap(wrap);
  }

  &--nowrap {
    @include mixin.flex-wrap(nowrap);
  }
}

.align-items {
  &--stretch {
    @include mixin.align-items(stretch);
  }

  &--start {
    @include mixin.align-items(flex-start);
  }

  &--center {
    @include mixin.align-items(center);
  }

  &--end {
    @include mixin.align-items(flex-end);
  }
}

.align-self {
  &--auto {
    @include mixin.align-items(auto);
  }

  &--start {
    @include mixin.align-items(flex-start);
  }

  &--center {
    @include mixin.align-items(center);
  }

  &--end {
    @include mixin.align-items(flex-end);
  }
}

.justify-content {
  &--start {
    @include mixin.justify-content(flex-start);
  }

  &--between {
    @include mixin.justify-content(space-between);
  }

  &--around {
    @include mixin.justify-content(space-around);
  }

  &--end {
    @include mixin.justify-content(flex-end);
  }

  &--center {
    @include mixin.justify-content(center);
  }
}

//width
.full-width {
  width: 100%;
}

//text alignment
$text-alignments: center, left, right, justify;
@each $align in $text-alignments {
  .text-#{$align} {
    text-align: $align;
  }
}

.text-truncate {
  @include mixin.truncate(100%);
}

// Gaps
$gaps: 4, 8, 12, 16;
.gap {
  @each $space in $gaps {
    &-#{$space} {
      gap: var(--space-#{$space});
    }
  }
}

.pointer {
  cursor: pointer;
}

[data-theme="dark"] {
  .color {
    $color-type: (
      primary: var(--grey-50),
      secondary: var(--grey-100),
      tertiary: var(--grey-40),
      disabled: var(--grey-20),
      selected: var(--brand-500),
      inverse: var(--white),
      brand: var(--brand-700),
      success: var(--green-600),
      information: var(--blue-800),
      warning: var(--yellow-800),
      danger: var(--red-600),
      discovery: var(--purple-800),
    );

    @each $type, $color in $color-type {
      &-#{$type} {
        color: $color;
      }
    }
  }
  .scrollbar {
    @-moz-document url-prefix() {
      scrollbar-color: var(--grey-50) transparent;
    }

    &::-webkit-scrollbar-thumb {
      background-color: var(--grey-30);

      &:hover {
        background-color: var(--grey-20);
      }
    }
  }
}

